--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,25 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "django (>=5.2.4,<6.0.0)"
+    "django (>=5.2.4,<6.0.0)",
+    "pymysql (>=1.1.1,<2.0.0)"
 ]
 
 [tool.poetry]
 packages = [{include = "recruitment", from = "src"}]
 
 
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^4.2.0"
+pytest = "^8.4.1"
+pytest-asyncio = "^1.0.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+
+[[tool.poetry.source]]
+name = "aliyun"
+url = "https://mirrors.aliyun.com/pypi/simple/"
+
