--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
       - id: check-yaml
       - id: debug-statements
       - id: detect-private-key
-      - id: end-of-file-fixer
+#      - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: mixed-line-ending
 
