--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,11 +7,15 @@ repos:
     rev: 6.0.1
     hooks:
       - id: isort
+  - repo: git@git.zhlh6.cn:psf/black
+    rev: 25.1.0
+    hooks:
+      - id: black
   - repo: git@git.zhlh6.cn:PyCQA/flake8
     rev: 7.3.0
     hooks:
       - id: flake8
-        args: ['--ignore=F401, E501']
+        args: ['--ignore=F401, E501 W503']
   - repo: git@git.zhlh6.cn:myint/autoflake
     rev: v2.3.1
     hooks:
