--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     rev: 7.3.0
     hooks:
       - id: flake8
-        args: ['--ignore=F401, E501 W503']
+        args: ['--ignore=F401, E501 W503 E402']
   - repo: git@git.zhlh6.cn:myint/autoflake
     rev: v2.3.1
     hooks:
