nginx.conf初始配置文件

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,24 @@
 #tengine3.1.0
 #user  nobody;
+# 默认1，一般建议设成CPU核数1-2倍
 worker_processes  1;
 
-#error_log  logs/error.log;
+error_log  logs/error.log;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 #error_log  "pipe:rollback logs/error_log interval=1d baknum=7 maxsize=2G";
 
-#pid        logs/nginx.pid;
+# 进程id
+pid        logs/nginx.pid;
 
 
 events {
+    # 使用epoll的I/O 模型处理轮询事件,可以不设置，nginx会根据操作系统选择合适的模型
+    # use epoll;
+
+    # 工作进程的最大连接数量, 默认1024个
     worker_connections  1024;
+
 }
 
 
@@ -19,15 +26,17 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                     '$status $body_bytes_sent "$http_referer" '
+                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  main;
     #access_log  "pipe:rollback logs/access_log interval=1d baknum=7 maxsize=2G"  main;
 
+    # 允许sendfile方式传输文件，默认为off。
     sendfile        on;
-    #tcp_nopush     on;
+    # sendfile开启时才开启。
+    tcp_nopush     on;
 
     #keepalive_timeout  0;
     keepalive_timeout  65;
@@ -44,8 +53,9 @@ http {
         #access_log  "pipe:rollback logs/host.access_log interval=1d baknum=7 maxsize=2G"  main;
 
         location / {
-            root   html;
-            index  index.html index.htm;
+             proxy_pass      http://127.0.0.1:8000;
+             deny 192.24.40.8;     # 拒绝的ip
+             allow 192.24.40.6;    # 允许的ip
         }
 
         #error_page  404              /404.html;
@@ -93,24 +103,34 @@ http {
     }
 
     # upstream for Dubbo rpc to Dubbo provider server listening on 127.0.0.1:20880
-    #
-    #upstream dubbo_backend {
-    #    multi 1;
-    #    server 127.0.0.1:20880;
-    #}
+    # 负载均衡
+    upstream dubbo_backend {
+       ip_hash;
+       server 192.168.190.2:8001;
+       server 192.168.190.2:8002;
+       server 192.168.190.2:8003;
+       server 192.168.190.2:8004 backup; # 热备
+    }
 
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
+    server {
+       listen       80;
+       # listen       somename:8080;
+       # server_name  somename  alias  another.alias;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+       charset utf-8;
+       client_max_body_size 10M; # 限制用户上传文件大小，默认1M
+
+       location / {
+             # 使用proxy_pass转发请求到通过upstream定义的一组应用服务器
+             proxy_pass      http://dubbo_backend;
+             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+             proxy_set_header Host $http_host;
+             proxy_redirect off;
+             proxy_set_header X-Real-IP  $remote_addr;
+       }
+    }
 
 
     # HTTPS server
