--- a/compose/nginx/nginx.conf
+++ b/compose/nginx/nginx.conf
@@ -19,7 +19,7 @@ http {
     keepalive_timeout 5 65;
     send_timeout 10;
     proxy_hide_header x-powered-By ;
-    limit_req_zone $binary_remote_addr zone=one:100k rate=20r/s
+    limit_req_zone $binary_remote_addr zone=one:100k rate=20r/s ;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                      '$status $body_bytes_sent "$http_referer" '
@@ -29,7 +29,7 @@ http {
     sendfile        on;
     map $http_x_real_client_addr $clientRealIp {
         "" $remote_addr;
-        ~^(?P< >[0-9.]+).?.*$firstAddr;
+        ~^(?P<firstAddr>[0-9.]+).$ $firstAddr;
         default $http_x_real_client_addr;
     }
     gzip  on;# nginx开启静态资源压缩,比如nginx返回磁盘的html文件特别大,里面包含了诸多的静态文件,极大提升网站访问
@@ -41,8 +41,17 @@ http {
 
 
     server {
-        listen       666;
+        listen       666  ssl;
         server_name  192.168.190.2;
+        ssl_certificate /home/jason/ssl/recruitment.crt;
+        ssl_certificate_key /home/jason/ssl/recruitment.key;
+        ssl_ciphers "ECDHE-RSA-AES-256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256" ;   # 使用安全密码套件
+        ssl_prefer_server_ciphers on ;   # 协商时优先使用服务器指定的加密算法
+        ssl_session_cache shared:SSL:1m; # 每1M缓存可以存储4000个会话,有效提升https网站处理ssl并发的能力
+        ssl_session_timeout 5m; # 设置合适的超时时间
+        ssl_protocols TLSv1.2 TLSv1.3 ; #nginx1.13.0版本开始支持TLSv1.3,#如果不配置ssl_protocols,默认使用TLSV1，TLSV1.1,TLSV1.2根据,安全要求TLS协议,ngin需要openssl版本>=1.01来支持TLSv1.2
+
+
         charset utf-8; #网站编码
 
         # 响应头配置
@@ -89,12 +98,12 @@ http {
             #X-forward-for和 remote address标头有助于识别和分离用户代理的原始客户端IP地址和代理IP地址,这两种类型地址是相同的,其中一种应该始终存在。将客户端的真实IP地址作为x-real-ip的值传递给后端服务器，以便后端服务器可以获取客户端的真实ip地址。The panda x rio IP dollar remote。Address
             proxy_set_header X-Real-IP $remote_addr;
             #将客户端的真实IP地址添加到x-forward-for头部中,以便后端服务器可以获取客户端的IP地址和代理服务器的IP地址。
-            proxy_set_header X-Forwarded-For $proxy_add_x_forward_for;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             #将客户端的真实IP作为X-Gunicorn-IP的值传递给后端服务器,以便后端服务器可以获取客户端的真实IP地址。这个指令是针对使用Gunicorn作为应用服务器的情况下的设置
             proxy_set_header X-Gunicorn-IP $http_x_real_client_addr;
 
             #real_ip_recursive,这是一个nginx配置命令,用于指定是否递归地将X-Forwarded-For投中所有IP地址替换为客户端的真实IP地址。如果设置为on, nginx将递归递查找 X-Forwarded-For头中所有的IP地址,并将最后一个IP地址替换为客户端的真实IP地址。
-            real_ip_recursive on;
+            #real_ip_recursive on;
 
             limit_except GET POST HEAD {
                  deny  all;# HTTP请求方法在全目录'/'目录下除了get post head返回403
@@ -105,9 +114,9 @@ http {
             expires 7d;
             add_header Pragma public;
             add_header Cache-Control "public,must-revalidate,proxy-revalidate";
-            valid_referers none blocked ~.google.~.baidu.server_names ~($host);
+            valid_referers none blocked server_names ~\.google\. ~\.baidu\.;
             if ($invalid_referer) {
-                rewrite(.*) /static/images/hotlink-denied.jpg redirect;
+                rewrite ^(.*)$ /static/images/hotlink-denied.jpg redirect;
                                    }
             }
 
