--- a/compose/nginx/nginx_demo.conf
+++ b/compose/nginx/nginx_demo.conf
@@ -20,7 +20,7 @@ http {
     autoindex off;# 禁止开启目录列表功能
     port_in_redirect off; # 禁止nginx重定向至监听端口
     client_body_timeout 10; # 默认时间为60秒,超过这个时间客户端没有发送数据,nginx返回408 request timeout
-    client_head_timeout 10; # 默认时间为60秒,超过这个时间客户端没有发送数据,nginx返回408 request timeout
+    client_header_timeout 10; # 默认时间为60秒,超过这个时间客户端没有发送数据,nginx返回408 request timeout
     # 第一个参数5指客户端连接保持活动的超时时间默认事75,第二个参数65是可选的,指消息头保持活动的有效时间,它可以告诉某些浏览器器关闭连接,因此服务器就不必关闭连接,如果没有这个参数,nginx不会发送keep-alive这个头
     keepalive_timeout 5 65;
     # 指定响应客户端的超时时间,这个超时仅仅限于两个阅读活动之间的时间,如果这个时间后客户端没有任何活动,nginx会关闭连接
@@ -76,7 +76,8 @@ http {
         ssl_ciphers "ECDHE-RSA-AES-256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256"   # 使用安全密码套件
         ssl_prefer_server_ciphers on    # 协商时优先使用服务器指定的加密算法
         ssl_session_cache shared:SSL:1m; # 每1M缓存可以存储4000个会话,有效提升https网站处理ssl并发的能力
-        ssl_seesion_timeout 5m; # 设置合适的超时时间
+        ssl_session_timeout 5m; # 设置合适的超时时间
+
         # 设置在线证书状态协议
         # OCSP(Online Certificate Status Protocol)在线证书状态协议,用来验证网站证书有效性
         # 使用OCSP可以加快https链接的建立,减少客户端带宽使用,OCSP客服了证书注销列表(CRL)的主要缺点,必须经过经常在客户端浏览器下载以确保更新,浏览器只需要像证书提供的OSCP服务器发送一个请求就可以验证证书状态而不需要下载整个CRL
@@ -136,7 +137,7 @@ http {
             #X-forward-for和 remote address标头有助于识别和分离用户代理的原始客户端IP地址和代理IP地址,这两种类型地址是相同的,其中一种应该始终存在。将客户端的真实IP地址作为x-real-ip的值传递给后端服务器，以便后端服务器可以获取客户端的真实ip地址。The panda x rio IP dollar remote。Address
             proxy_set_header X-Real-IP $remote_addr;
             #将客户端的真实IP地址添加到x-forward-for头部中,以便后端服务器可以获取客户端的IP地址和代理服务器的IP地址。
-            proxy_set_header X-Forwarded-For $proxy_add_x_forward_for;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             #将客户端的真实IP作为X-Gunicorn-IP的值传递给后端服务器,以便后端服务器可以获取客户端的真实IP地址。这个指令是针对使用Gunicorn作为应用服务器的情况下的设置
             proxy_set_header X-Gunicorn-IP $http_x_real_client_addr;
 
